--- a/djaja_works/app/src/main/res/values/colors.xml
+++ b/djaja_works/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#FFC107</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBlack">#154443</color>
+    <color name="colorBlack">#10000F</color>
 </resources>
