--- a/djaja_works/app/src/main/res/layout/activity_login.xml
+++ b/djaja_works/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="blank.djaja_works.view.login"
-    android:background="@color/colorBlack">
+    tools:context="blank.djaja_works.view.login">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +21,7 @@
             android:layout_height="280sp"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <!--<ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -40,9 +39,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
@@ -51,52 +50,60 @@
         <!--Logo here-->
         <EditText
             android:id="@+id/email"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
             android:padding="10dp"
-            android:singleLine="true"
-            android:textColor="@color/input_login"
-            android:textColorHint="@color/input_login_hint" />
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@color/colorPrimaryDark"
-            android:hint="@string/hint_password"
+            android:background="@color/colorPrimary"
+            android:hint="@string/hint_pwd"
             android:inputType="textPassword"
             android:padding="10dp"
-            android:singleLine="true"
-            android:textColor="@color/input_login"
-            android:textColorHint="@color/input_login_hint" />
+            android:singleLine="true" />
 
         <!-- Login Button -->
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:layout_marginTop="15dip"
+            android:background="@color/colorPrimary"
             android:text="@string/text_login"
             android:textColor="@color/colorWhite"
             />
 
         <!-- Link to Login Screen -->
         <TextView
-            android:id="@+id/textViewLinkRegister"
-            android:layout_width="fill_parent"
+            android:id="@+id/textViewLinkLupa"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10sp"
             android:gravity="center"
-            android:onClick="regstrClick"
+            android:text="@string/text_forget"
+            android:textSize="16dp"
+            android:textColor="@color/colorBlack"/>
+        <!--android:onClick="forgetClick"-->
+
+        <TextView
+            android:id="@+id/textViewLinkRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:gravity="center"
             android:text="@string/text_not_member"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            android:textColor="@color/colorBlack"/>
+        <!--android:onClick="regstrClick"-->
     </LinearLayout>
 
 </LinearLayout>
