--- a/djaja_works/app/src/main/res/layout/activity_register.xml
+++ b/djaja_works/app/src/main/res/layout/activity_register.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
-    tools:context="blank.djaja_works.view.register"
-    android:background="@color/colorBlack">
+    tools:context="blank.djaja_works.view.register">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -15,10 +14,96 @@
         android:layout_height="56dp"
         android:background="@color/colorWhite"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:titleTextColor="@color/colorBlack" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="30sp"
+        >
+        <!--Logo here-->
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:hint="@string/hint_email"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:singleLine="true" />
 
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:hint="@string/hint_pwd"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:singleLine="true" />
 
+        <EditText
+            android:id="@+id/umur"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:hint="@string/text_Umur"
+            android:inputType="numberDecimal"
+            android:padding="10dp"
+            android:singleLine="true" />
 
+        <!--Harusnya pake spinner-->
+        <Spinner
+            android:id="@+id/jK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:padding="10dp"
+            android:popupBackground="@color/colorPrimary">
+
+        </Spinner>
+
+        <EditText
+            android:id="@+id/noKTP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:hint="@string/text_nKtp"
+            android:inputType="number"
+            android:padding="10dp"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/noRekening"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:hint="@string/text_nRekening"
+            android:inputType="number"
+            android:padding="10dp"
+            android:singleLine="true" />
+
+        <!-- Login Button -->
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dip"
+            android:background="@color/colorBlack"
+            android:text="@string/text_Register"
+            android:textColor="@color/colorWhite" />
+    </LinearLayout>
 
 </LinearLayout>
