--- a/djaja_works/app/src/main/res/layout/activity_register.xml
+++ b/djaja_works/app/src/main/res/layout/activity_register.xml
@@ -94,6 +94,17 @@
             android:padding="10dp"
             android:singleLine="true" />
 
+        <Spinner
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:padding="10dp"
+            android:popupBackground="@color/colorPrimary">
+
+        </Spinner>
+
         <!-- Login Button -->
 
         <Button
