--- a/djaja_works/app/src/main/res/layout/activity_register.xml
+++ b/djaja_works/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
         >
         <!--Logo here-->
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/emailReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -39,7 +39,7 @@
             android:singleLine="true" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -108,7 +108,7 @@
         <!-- Login Button -->
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
