--- a/djaja_works/app/src/main/res/layout/activity_register.xml
+++ b/djaja_works/app/src/main/res/layout/activity_register.xml
@@ -50,6 +50,17 @@
             android:singleLine="true" />
 
         <EditText
+            android:id="@+id/namaReg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorPrimary"
+            android:hint="@string/text_Username"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true" />
+
+        <EditText
             android:id="@+id/umur"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
