--- a/djaja_works/app/src/main/res/layout/activity_main.xml
+++ b/djaja_works/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="fixed"
-            app:tabGravity="fill"/>
+            app:tabGravity="fill"
+            android:background="@color/colorBrown"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
