--- a/djaja_works/app/src/main/res/values/dimens.xml
+++ b/djaja_works/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="row_padding">10dp</dimen>
     <dimen name="contact_name">15dp</dimen>
     <dimen name="contact_number">12dp</dimen>
+    <dimen name="list_no_notes">26sp</dimen>
+    <dimen name="margin_top_no_notes">120dp</dimen>
 </resources>
