Adding some icon and color adjustment

--- a/djaja_works/app/src/main/res/layout/activity_add_usaha.xml
+++ b/djaja_works/app/src/main/res/layout/activity_add_usaha.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/colorPrimary"
+        android:background="#ffc107"
         app:layout_scrollFlags="scroll|enterAlways"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:titleTextColor="@color/colorBlack" />
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@color/colorGrey"
+            android:background="#dcdddd"
             android:hint="@string/text_nUsaha"
             android:inputType="text"
             android:padding="10dp"
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@color/colorGrey"
+            android:background="#dcdddd"
             android:hint="@string/text_deskripsiUsaha"
             android:inputType="textLongMessage"
             android:padding="10dp"
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@color/colorGrey"
+            android:background="#dcdddd"
             android:hint="@string/text_uBulanan"
             android:inputType="number"
             android:padding="10dp"
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="@color/colorGrey"
+            android:background="#dcdddd"
             android:hint="@string/text_modal"
             android:inputType="number"
             android:padding="10dp"
