--- a/djaja_works/app/src/main/res/layout/activity_login.xml
+++ b/djaja_works/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:orientation="vertical"
-        android:background="@color/colorPrimary"
+        android:background="#ffc107"
         >
 
         <LinearLayout
@@ -27,14 +27,11 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_holla_logo"/>-->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Fundaid Djaya"
-                android:textAlignment="center"
-                android:textColor="@color/colorBlack"
-                android:textSize="35dp" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="228dp"
+                android:layout_height="161dp"
+                app:srcCompat="@drawable/icon1_1" />
         </LinearLayout>
     </LinearLayout>
 
@@ -45,30 +42,57 @@
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="30sp"
-        >
+        android:paddingTop="30sp">
         <!--Logo here-->
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@color/colorPrimary"
-            android:hint="@string/hint_email"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true" />
 
-        <EditText
-            android:id="@+id/password"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@color/colorPrimary"
-            android:hint="@string/hint_pwd"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:singleLine="true" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:scaleType="fitXY"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/icon15" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="#dcdddd"
+                android:hint="@string/hint_email"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:singleLine="true" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/icon4" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="#dcdddd"
+                android:hint="@string/hint_pwd"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:singleLine="true" />
+        </LinearLayout>
+
 
         <!-- Login Button -->
 
@@ -77,10 +101,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:background="@color/colorPrimary"
+            android:background="#ffc107"
             android:text="@string/text_login"
-            android:textColor="@color/colorWhite"
-            />
+            android:textColor="@color/colorWhite" />
 
         <!-- Link to Login Screen -->
         <TextView
@@ -90,8 +113,8 @@
             android:layout_marginTop="10sp"
             android:gravity="center"
             android:text="@string/text_forget"
-            android:textSize="16dp"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack"
+            android:textSize="16dp" />
         <!--android:onClick="forgetClick"-->
 
         <TextView
@@ -101,8 +124,10 @@
             android:layout_marginTop="10sp"
             android:gravity="center"
             android:text="@string/text_not_member"
-            android:textSize="16dp"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack"
+            android:textSize="16dp" />
+
+
         <!--android:onClick="regstrClick"-->
     </LinearLayout>
 
