--- a/djaja_works/app/src/main/res/layout/fragment_about.xml
+++ b/djaja_works/app/src/main/res/layout/fragment_about.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/colorPrimary"
+        android:background="#ffc107"
         app:layout_scrollFlags="scroll|enterAlways"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
