--- a/djaja_works/app/src/main/res/layout/upper_bar.xml
+++ b/djaja_works/app/src/main/res/layout/upper_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="56sp"
-    android:background="@color/colorPrimary"
+    android:background="#ffc107"
     app:layout_scrollFlags="scroll|enterAlways"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
     <!--<android.support.v7.widget.Toolbar
