--- a/djaja_works/app/src/main/res/layout/activity_profile.xml
+++ b/djaja_works/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="blank.djaja_works.Profile">
+    tools:context="blank.djaja_works.profilakun">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,14 +57,96 @@
             android:layout_width="match_parent"
             android:layout_height="280sp"
             android:layout_gravity="center_vertical"
-            android:gravity="center"
             android:background="#eeeeef"
             android:orientation="vertical">
-            <!--<ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_holla_logo"/>-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginLeft="20sp"
+                    android:gravity="center"
+                    android:text="E-Mail"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/tvEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="103sp"
+                    android:layout_marginTop="10sp"
+                    android:gravity="center_vertical"
+                    android:text="TextView"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="24sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textview1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginLeft="20sp"
+                    android:gravity="center"
+                    android:text="Umur"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/tvUmur"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="112sp"
+                    android:layout_marginTop="10sp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="24sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textview2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginLeft="20sp"
+                    android:gravity="center"
+                    android:text="Jenis Kelamin"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/tvJK"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginLeft="20sp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="24sp" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
     </LinearLayout>
