--- a/djaja_works/app/src/main/res/layout/fragment_kelola.xml
+++ b/djaja_works/app/src/main/res/layout/fragment_kelola.xml
@@ -52,7 +52,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp">
         <Button
-            android:id="@+id/btnTest3"
+            android:id="@+id/btnProfil"
             android:gravity="left"
             android:layout_gravity="left"
             android:layout_weight="1"
@@ -64,7 +64,7 @@
             android:textAlignment="center"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:text="Tulis Sesuatu" />
+            android:text="Profil" />
 
         <Button
             android:id="@+id/btnTest4"
