--- a/djaja_works/app/src/main/res/menu/menu_2.xml
+++ b/djaja_works/app/src/main/res/menu/menu_2.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/mnr_refresh"
+        android:id="@+id/mnr_logout"
         android:title="Refresh"
         app:showAsAction="ifRoom"/>
 </menu>
