--- a/djaja_works/app/src/main/res/layout/activity_splash_screen.xml
+++ b/djaja_works/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="blank.djaja_works.SplashScreen">
+    tools:context="blank.djaja_works.SplashScreen"
+    android:background="@color/colorPrimary">
 
-    <android.support.v7.widget.AppCompatImageView
+    <!-- coba tes di hp masing-masing mana yang lebih clean, btw maaf buat yang bawahnya enggak bisa.-->
+    <!--<android.support.v7.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/splash"
         android:scaleType="fitXY"
-        />
+        />-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <ImageView
+            android:padding="20dp"
+            android:layout_gravity="center"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/icon1_alter"
+            android:background="@drawable/curve_shape"/>
+    </LinearLayout>
 
 </LinearLayout>
