--- a/djaja_works/app/src/main/res/layout/activity_topup.xml
+++ b/djaja_works/app/src/main/res/layout/activity_topup.xml
@@ -74,7 +74,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/nom"
+                android:id="@+id/coin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
