--- a/djaja_works/app/src/main/res/layout/fragment_kelola.xml
+++ b/djaja_works/app/src/main/res/layout/fragment_kelola.xml
@@ -4,45 +4,106 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.Kelola">
+    tools:context=".view.Kelola"
+    android:background="@color/colorWhite">
 
     <LinearLayout
+        android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="40dp"
+        android:gravity="center">
+        <android.support.v7.widget.CardView
+            android:id="@+id/topupPress"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:src="@drawable/ic_topup"
+                    android:padding="10dp"
+                    android:background="@color/colorPrimary"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="Topup"/>
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/btnAddUsaha"
-            android:gravity="left"
-            android:layout_gravity="left"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:textAlignment="center"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/text_judulAddUsaha"
-            android:visibility="gone"/>
+        </android.support.v7.widget.CardView>
 
-        <Button
-            android:id="@+id/btnIsi"
-            android:gravity="right"
-            android:layout_gravity="left"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:textAlignment="center"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/text_nTopup" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/profilPress"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:src="@drawable/ic_profil"
+                    android:padding="10dp"
+                    android:background="@color/colorPrimary"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/text_nProfil"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:clipToPadding="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="40dp"
+        android:gravity="center">
+        <android.support.v7.widget.CardView
+            android:id="@+id/helpPress"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:src="@drawable/ic_help"
+                    android:padding="10dp"
+                    android:background="@color/colorPrimary"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="Bantuan"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
@@ -51,21 +112,6 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp">
-        <Button
-            android:id="@+id/btnProfil"
-            android:gravity="left"
-            android:layout_gravity="left"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:textAlignment="center"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="Profil" />
-
         <Button
             android:id="@+id/btnTest4"
             android:gravity="right"
@@ -82,4 +128,8 @@
             android:text="Logout" />
     </LinearLayout>
 
+
 </LinearLayout>
+
+<!--
+</LinearLayout>-->
